# braccio-ros

./: LICENSE  README.md
braccio_description/urdf/: braccio_arm.urdf  braccio_arm.xacro
braccio_moveit_config/: package.xml
braccio_moveit_config/config/: braccio.srdf  fake_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml
braccio_moveit_config/launch/: braccio_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
braccio_upload/: CMakeLists.txt  package.xml
braccio_upload/launch/: upload.launch
braccio_upload/rviz/: demo.rviz
